--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -19,6 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="5dp"
+        android:ems="10"
         android:layout_toEndOf="@+id/ivProfilImage"
         android:text="TextView" />
 
@@ -33,4 +34,5 @@
         android:text="TextView"
         android:autoLink="all"
         android:linksClickable="true"/>
+
 </RelativeLayout>
